# Handibox

./: Makefile  Makefile.am  Makefile.am~  Makefile.in  README.md  config.status  configure  configure.ac  configure.ac~  handibox  handibox.in  handibox.in~
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
haarcascade/: Makefile  Makefile.am  Makefile.in
res/: Makefile  Makefile.am  Makefile.in
src/: Calibrations.py  Camera.py  Camera.py~  CameraSettings.py  CameraSettings.py~  FaceTracking.py  FaceTracking.py~  HandiboxMain.py  HandiboxMain.py~  HandiboxSettings.py  Makefile  Makefile.am  Makefile.am~  Makefile.in  MouseTweak.py  Process_manager.py  ScreenKeyboard.py  ScreenMagnifier.py
