FILE=camera
VARIABLE=`cat $(FILE)`

target:	echo $(VARIABLE)

handibox_PYTHON = \
	HandiboxMain.py\
	Calibrations.py\
	Camera.py\
	CameraSettings.py\
	FaceTracking.py\
	HandiboxSettings.py\
	MouseTweak.py\
	Process_manager.py\
	ScreenKeyboard.py\
	ScreenMagnifier.py\
	haarcascade_frontalface_default.xml\
	__init__.py
handiboxdir = $(pythondir)/handibox
